syntax = "proto3";
option go_package = "proto.bank.branch";

service BankBranchService {
  rpc List(ListBankBranchRequest) returns (ListBankBranchResponse);
  rpc Create(CreateBankBranchRequest) returns (BankBranchProfileResponse);
  rpc Get(SingleBankBranchRequest) returns (BankBranchProfileResponse);
  rpc Update(UpdateBankBranchRequest) returns (SuccessResponse);
  rpc Delete(SingleBankBranchRequest) returns (SuccessResponse);
}

message ListBankBranchRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

message ListBankBranchResponse {
  repeated BankBranchProfileResponse bank_branches = 1;
}

message CreateBankBranchRequest{
  int64 code = 1;
  string name = 2;
  int64 bank_id = 3;
  int64 region_id = 4;
  int64 district_id = 5;
  string address = 6;
  string open_date = 7;
  string close_date = 8;
}

message SingleBankBranchRequest{
  oneof bank_branch_identifier {
    string id = 1;
    string code = 2;
  }
}

message BankBranchProfileResponse{
  int64 id = 1;
  string name = 2;
  int64 code = 3;
  int64 bank_id = 4;
  int64 region_id = 5;
  int64 district_id = 6;
  string address = 7;
  string open_date = 8;
  string close_date = 9;
  string deleted_at = 10;
}

message SuccessResponse{
  string response = 1;
}

message UpdateBankBranchRequest {
  int64 id = 1;
  string name = 2;
  int64 code = 3;
  int64 bank_id = 4;
  int64 region_id = 5;
  int64 district_id = 6;
  string address = 7;
  string open_date = 8;
  string close_date = 9;
}


/*
protoc \
--proto_path=proto/bank_branch \
--go_out=proto/bank_branch \
--go_opt=paths=source_relative proto/bank_branch/bank_branch.proto \
--go-grpc_out=proto/bank_branch \
--go-grpc_opt=paths=source_relative proto/bank_branch/bank_branch.proto
*/